[package]
name = "rocket_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0"
tokio = { version = "1", features = ["full"] }
eyre = "0.6"
dotenv = "0.15"
ethers-etherscan = "2.0.8"
serde_json = "1.0"
